tests/baselines/reference/commaOperatorInvalidAssignmentType.errors.txt
tests/cases/conformance/expressions/commaOperator/commaOperatorInvalidAssignmentType.ts(10,1): error TS2322: Type '文字' is not assignable to type '真假'.
tests/cases/conformance/expressions/commaOperator/commaOperatorInvalidAssignmentType.ts(11,1): error TS2322: Type '数字' is not assignable to type '真假'.
tests/cases/conformance/expressions/commaOperator/commaOperatorInvalidAssignmentType.ts(13,1): error TS2322: Type '真假' is not assignable to type '数字'.
tests/cases/conformance/expressions/commaOperator/commaOperatorInvalidAssignmentType.ts(14,1): error TS2322: Type '文字' is not assignable to type '数字'.
tests/cases/conformance/expressions/commaOperator/commaOperatorInvalidAssignmentType.ts(16,1): error TS2322: Type '真假' is not assignable to type '文字'.
tests/cases/conformance/expressions/commaOperator/commaOperatorInvalidAssignmentType.ts(17,1): error TS2322: Type '数字' is not assignable to type '文字'.


==== tests/cases/conformance/expressions/commaOperator/commaOperatorInvalidAssignmentType.ts (6 errors) ====
    var BOOLEAN: boolean;
    var NUMBER: number;
    var STRING: string;
    
    var resultIsBoolean: boolean
    var resultIsNumber: number
    var resultIsString: string
    
    //Expect errors when the results type is different form the second operand
    resultIsBoolean = (BOOLEAN, STRING);
    ~~~~~~~~~~~~~~~
!!! error TS2322: Type '文字' is not assignable to type '真假'.
    resultIsBoolean = (BOOLEAN, NUMBER);
    ~~~~~~~~~~~~~~~
!!! error TS2322: Type '数字' is not assignable to type '真假'.
    
    resultIsNumber = (NUMBER, BOOLEAN);
    ~~~~~~~~~~~~~~
!!! error TS2322: Type '真假' is not assignable to type '数字'.
    resultIsNumber = (NUMBER, STRING);
    ~~~~~~~~~~~~~~
!!! error TS2322: Type '文字' is not assignable to type '数字'.
    
    resultIsString = (STRING, BOOLEAN);
    ~~~~~~~~~~~~~~
!!! error TS2322: Type '真假' is not assignable to type '文字'.
    resultIsString = (STRING, NUMBER);
    ~~~~~~~~~~~~~~
!!! error TS2322: Type '数字' is not assignable to type '文字'.
    